initial commit with styling

--- a/index.html
+++ b/index.html
@@ -5,6 +5,11 @@
   <meta charset="UTF-8" />
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <!-- 98.css STYLESHEET -->
+  <link rel="stylesheet" href="98css/style.css" />
+  <link rel="stylesheet" href="98css/docs/docs.css">
+  <link rel="stylesheet" href="98css/docs/vs.css">
+
   <title>Gradient Generator :)</title>
 </head>
 
