--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <link rel="icon" type="image/svg+xml" href="98css/icon/restore.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- 98.css STYLESHEET -->
   <link rel="stylesheet" href="98css/style.css" />
